; ModuleID = '/home/carl/AnghaBench/php-src/sapi/litespeed/extr_lscriu.c_LSCRIU_Increase_Global_Counter.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/litespeed/extr_lscriu.c_LSCRIU_Increase_Global_Counter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CRIU_GCOUNTER_SHM = common dso_local global i64 0, align 8
@s_initial_start_reqs = common dso_local global i32 0, align 4
@s_requests_count = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @LSCRIU_Increase_Global_Counter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @LSCRIU_Increase_Global_Counter() #0 {
  %1 = call i64 (...) @LSCRIU_Get_Global_Counter_Type()
  %2 = load i64, i64* @CRIU_GCOUNTER_SHM, align 8
  %3 = icmp ne i64 %1, %2
  br i1 %3, label %7, label %4

4:                                                ; preds = %0
  %5 = load i32, i32* @s_initial_start_reqs, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %4, %0
  br label %10

8:                                                ; preds = %4
  %9 = call i32 @LSAPI_Inc_Req_Processed(i32 1)
  store i32 %9, i32* @s_requests_count, align 4
  br label %10

10:                                               ; preds = %8, %7
  ret void
}

declare dso_local i64 @LSCRIU_Get_Global_Counter_Type(...) #1

declare dso_local i32 @LSAPI_Inc_Req_Processed(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
